# Fall_Dectection_App

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: YOLO_dataset.yaml  config.yaml
data/Fall Detection.v4-resized640_aug3x-accurate.yolov8/labels/: train.cache  val.cache
data/FallDetection.v4-resized640_aug3x-accurate.yolov8/: README.dataset.roboflow.txt
data/FallDetection.v4-resized640_aug3x-accurate.yolov8/labels/: train.cache  val.cache
data/PRISTINE_DATA/Fall Detection.v4-resized640_aug3x-accurate.yolov8/labels/: train.cache
results/final_training/: args.yaml  events.out.tfevents.1717311095.LAPTOP-P7E2CF74.145084.0
runs/detect/training/train/: args.yaml  events.out.tfevents.1716308279.LAPTOP-P7E2CF74.11736.0  events.out.tfevents.1717011323.LAPTOP-P7E2CF74.91392.0  results.csv
runs/detect/training/train2/: args.yaml  events.out.tfevents.1717088110.LAPTOP-P7E2CF74.75756.0  results.csv
runs/detect/training/train3/: args.yaml  events.out.tfevents.1717256987.LAPTOP-P7E2CF74.138840.0
runs/detect/training/train4/: args.yaml  results.csv
runs/detect/training/train5/: args.yaml  events.out.tfevents.1717354334.LAPTOP-P7E2CF74.150652.0  results.csv
runs/optuna/detect/train/: args.yaml  events.out.tfevents.1716302777.LAPTOP-P7E2CF74.39864.0  results.csv
runs/optuna/detect/train2/: args.yaml  events.out.tfevents.1716304588.LAPTOP-P7E2CF74.39864.1  results.csv
runs/optuna/detect/train3/: args.yaml  results.csv  (+1 more)
src/: main.py  secondary_module.py  streamlit_app.py  yolo.py  yolo_optuna.py  yolo_training.py
(+257 files in other folders)
